@@ -1,6 +1,10 @@
 All notable changes to this project will be documented in this file. For a
 complete changelog, see https://github.com/jollejolles/pirecorder/commits/
 
+Committed changes not yet in latest release:
+    * Added statement to camconfig and documentation website regarding minimum
+      recommended resolution
+
 2020-07-07 version 3.1.0
     * Added accompanying academic paper for pirecorder, submitted to The
       Journal of Open Source Software
